--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,17 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        python -m pip install flake8 pytest
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
+    - name: Lint with flake8
+      run: |
